src/golden/handlers/typeerrors/test.golden/checklambda.fl
	contract handler Fred
	
	handler Fred WantsNumber (Number x)
	
	h = WantsNumber "hello"